--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -43,8 +43,8 @@ nav a{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 12pt;
     transition: all 0.2s linear;
-    color: white;
-    border-bottom: 2px solid white;
+    color: var(--cor-secundaria);
+    border-bottom: 2px solid var(--cor-secundaria);
 }
 
 .link:hover{
