--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -24,6 +24,7 @@
 
 header{
     background: var(--cor-primaria);
+    box-shadow: 0px 0px 10px grey;
 }
 
 /*Configura e estiliza a barra lateral e seus itens*/
