--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,7 +1,28 @@
+/*Configura as margens e o fundo do site*/
 *{
     margin: 0;
     padding: 0;
 }
 body{
     background: white;
+}
+main{
+    align-items: center;
+}
+
+/*Configura a citação e o texto "sobre nós"*/
+#paulo-freire{
+    width: 600px;
+    height: 400px;
+    margin-top: 75px;
+}
+
+#sobre-nos{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    display: block;
+    text-align: left;
+    margin-left: 45vw;
+    margin-top: 250px;
+    position: absolute;
 }
