--- a/css/menuStyle.css
+++ b/css/menuStyle.css
@@ -17,15 +17,24 @@
     z-index: 1;
 }
 
+#icon img{
+    border: none;
+    border-radius: 0px;
+}
+
 /*Configura a logo do cabeçalho*/
 #logo{
     max-height: 75px;
     margin-left: 35vw;
+    border: none;
 }
 
 header{
     background: var(--cor-primaria);
     box-shadow: 0px 0px 10px grey;
+    position: fixed;/**/
+    width: 100%;/**/
+    z-index: 1;/**/
 }
 
 /*Configura e estiliza a barra lateral e seus itens*/
@@ -33,7 +42,7 @@ header{
     background: var(--cor-primaria);
     height: 100%;
     width: 300px;
-    position: absolute;
+    position: fixed;
     transition: all 0.2s linear;
     left: -300px;
 }
